# linear-algebra-lib

./: .gitignore  CMakeLists.txt  README.md  sandbox.cpp
include/: Eigen.hpp  Matrix.hpp
src/: LinearSolver.cpp  Matrix.tpp
tests/: test_matrix.cpp
